--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/vijayetar/CityExplorer_VR.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vij Rangarajan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/vijayetar/CityExplorer_VR/issues"
